--- a/Front/package.json
+++ b/Front/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "axios": "^1.6.3",
     "express": "^4.18.2",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
