--- a/Front-CoreUI/package.json
+++ b/Front-CoreUI/package.json
@@ -38,6 +38,7 @@
     "chart.js": "^3.9.1",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
+    "primeng": "^17.3.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
