--- a/Front-CoreUI/package.json
+++ b/Front-CoreUI/package.json
@@ -38,6 +38,8 @@
     "chart.js": "^3.9.1",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^17.3.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
