--- a/Front-CoreUI/angular.json
+++ b/Front-CoreUI/angular.json
@@ -104,6 +104,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/scss/styles.scss"
             ],
             "scripts": []
