--- a/Front/package.json
+++ b/Front/package.json
@@ -36,12 +36,14 @@
     "@coreui/icons-angular": "~4.7.0",
     "@coreui/utils": "^2.0.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "chart.js": "^3.9.1",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^17.3.2",
+    "primeng": "^17.5.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
