--- a/Api/.env.example
+++ b/Api/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:MBINisBF4a7epBpstGCVis09/GCxAZHeay/W2h6HBAE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -29,13 +29,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=in-v3.mailjet.com
+MAIL_PORT=587
+MAIL_USERNAME=726595b3ca4c38929e49ebedf97f89ac  # Clé API Mailjet
+MAIL_PASSWORD=8285aa87a5f115483ba7ee337fc728a5  # Clé secrète Mailjet
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=soshome50@gmail.com
+MAIL_FROM_NAME="Easy-Request"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
